Добавлена система сборки с настраиваемыми путями и базовым URL
- Создан скрипт scripts/build.js для управления путями при сборке
- Добавлены npm-скрипты: build:custom, build:ttp_v3, build:ttp_v3:absolute
- Поддержка относительных и абсолютных путей к JS/CSS файлам
- Возможность указать базовый URL (например, ttp_v3) для развертывания в подпапке
- Обновлена документация с инструкциями по использованию

--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:custom": "node scripts/build.js",
+    "build:ttp_v3": "node scripts/build.js --base-url=ttp_v3 --relative-paths",
+    "build:ttp_v3:absolute": "node scripts/build.js --base-url=ttp_v3 --absolute-paths",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": ".",
   "eslintConfig": {
     "extends": [
       "react-app",
