--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "midi-writer-js": "^3.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
